--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="box-nav d-flex-justify-between">
             <a href="/add-product" class="border-shadow">
-                <span class="text-gradient">Novo Produto <i class="fa-solid fa-user"></i></span>
+                <span class="text-gradient">Novo Produto <i class="fa-brands fa-product-hunt"></i></span>
             </a>
         </div>
 
