--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -15,7 +15,7 @@
         <nav>
             <div class="container">
                 <div class="text-center">
-                    <a href="/" class="nav-brand-text-dark">Cadastro de Produtos</a>
+                    <a href="/" class="nav-brand-text-dark" id="title">Cadastro de Produtos</a>
                 </div>
             </div>
         </nav>
