--- a/views/include/_show.ejs
+++ b/views/include/_show.ejs
@@ -9,7 +9,7 @@
             <a href="/update-product?id=<%= products[i]._id%>" class="btn border-shadow update">
                 <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
             </a>
-            <a class="btn border-shadow delete" data-id=<%= products[i]._id%> >
+            <a class="delete" data-id=<%= products[i]._id%> >
                 <span class="text-gradient"><i class="fas fa-times"></i></span>
             </a>
         </td>
