--- a/views/update_product.ejs
+++ b/views/update_product.ejs
@@ -14,7 +14,7 @@
         </div>
 
 
-        <form method="POST" id="update_product">
+        <form action="/api/products/<%= product._id %>" method="POST" id="update_product">
             <div class="new_product">
                 <div class="form-group">
                     <label for="nomeProduto" class="text-light">Nome Produto</label>
@@ -35,7 +35,7 @@
                 </div>
         
                 <div class="form-group">
-                    <button type="submit" class="btn text-dark update">Cadastrar</button>
+                    <button type="submit" class="btn text-dark update">Atualizar</button>
                 </div>
             </div>
             
